added basic functionality of website, cleaned up the look some more. pushing all files for now.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Shane Lazio</title>
+    <title>Shane Lazio Portfolio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -42,9 +42,9 @@
                             <div class="logo">
                                     <!-- Social Icons -->
                                     <ul class="icons">
-                                        <li><a href="https://www.linkedin.com/in/laz25/" class="fa fa-linkedin" title="Linkedin"></span></a></li>
-                                        <li><a href="https://github.com/Shanejr25" class="fa fa-github" title="Github"></span></a></li>
-                                        <li><a href="https://www.instagram.com/slazio18/" class="fa fa-instagram" title="Instagram"></span></a></li>
+                                        <li><a href="https://www.linkedin.com/in/laz25/" target="_blank" class="fa fa-linkedin" title="Linkedin"></span></a></li>
+                                        <li><a href="https://github.com/Shanejr25" target="_blank" class="fa fa-github" title="Github"></span></a></li>
+                                        <li><a href="https://www.instagram.com/slazio18/" target="_blank" class="fa fa-instagram" title="Instagram"></span></a></li>
                                     </ul>
                             </div>
                         </div>
@@ -55,15 +55,7 @@
                                         <li><a class="active" href="index.html">home</a></li>
                                         <li><a href="about.html">About</a></li>
                                         
-                                        <li><a href="/web/viewer.html?file=resume.pdf">Resume</a>
-                                        </li>
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                    <li><a href="portfolio-work.html">Portfolio work</a></li>
-                                                 <li><a href="work_details.html">work details</a></li>
-                                                 <li><a href="services.html">Services</a></li>
-                                                 <li><a href="elements.html">elements</a></li>
-                                            </ul>
+                                        <li><a href="/web/viewer.html?file=ShaneLazio-Resume.pdf" target="_blank">Resume</a>
                                         </li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
@@ -85,7 +77,7 @@
     <div class="slider_area">
         <div class="single_slider  d-flex align-items-center slider_bg_1">
             <div class="outline_text d-none d-lg-block">
-                    Shane
+                    Software Engineer
             </div>
             <div class="container">
                 <div class="row align-items-center justify-content-center">
