--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>portfolio</title>
+    <title>Shane Lazio Portfolio</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -40,9 +40,12 @@
                   <div class="row align-items-center">
                       <div class="col-xl-3 col-lg-2">
                           <div class="logo">
-                              <a href="index.html">
-                                  <img src="img/logo.png" alt="">
-                              </a>
+                                  <!-- Social Icons -->
+                                  <ul class="icons">
+                                      <li><a href="https://www.linkedin.com/in/laz25/" class="fa fa-linkedin" title="Linkedin"></span></a></li>
+                                      <li><a href="https://github.com/Shanejr25" class="fa fa-github" title="Github"></span></a></li>
+                                      <li><a href="https://www.instagram.com/slazio18/" class="fa fa-instagram" title="Instagram"></span></a></li>
+                                  </ul>
                           </div>
                       </div>
                       <div class="col-xl-9 col-lg-10">
@@ -52,20 +55,9 @@
                                       <li><a class="active" href="index.html">home</a></li>
                                       <li><a href="about.html">About</a></li>
                                       
-                                      <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                          <ul class="submenu">
-                                              <li><a href="blog.html">blog</a></li>
-                                              <li><a href="single-blog.html">single-blog</a></li>
-                                          </ul>
+                                      <li><a href="/web/viewer.html?file=ShaneLazio-Resume.pdf" target="_blank">Resume</a>
                                       </li>
-                                      <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                          <ul class="submenu">
-                                                  <li><a href="portfolio-work.html">Portfolio work</a></li>
-                                               <li><a href="work_details.html">work details</a></li>
-                                               <li><a href="services.html">Services</a></li>
-                                               <li><a href="elements.html">elements</a></li>
-                                          </ul>
-                                      </li>
+                                      
                                       <li><a href="contact.html">Contact</a></li>
                                   </ul>
                               </nav>
