--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
                                         <li><a href="https://www.linkedin.com/in/laz25/" class="fa fa-linkedin" title="Linkedin"></span></a></li>
                                         <li><a href="https://github.com/Shanejr25" class="fa fa-github" title="Github"></span></a></li>
                                         <li><a href="https://www.instagram.com/slazio18/" class="fa fa-instagram" title="Instagram"></span></a></li>
+                                        <li><a href="mailto:stlaziojr@gmail.com" target="_blank" class="fa fa-envelope" title="Email"></span></a></li>
                                     </ul>
                             </div>
                         </div>
@@ -57,8 +58,7 @@
                                         
                                         <li><a href="/web/viewer.html?file=ShaneLazio-Resume.pdf" target="_blank">Resume</a>
                                         </li>
-                                        
-                                        <li><a href="contact.html">Contact</a></li>
+
                                     </ul>
                                 </nav>
                             </div>
