Added some more project pictures, fixed dragonden desc

--- a/capstone_project.html
+++ b/capstone_project.html
@@ -38,26 +38,25 @@
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid">
                     <div class="row align-items-center">
-                        <div class="col-xl-3 col-lg-2">
+                        <div class="col-xl-3 col-lg-4">
                             <div class="logo">
                                     <!-- Social Icons -->
                                     <ul class="icons">
                                         <li><a href="https://www.linkedin.com/in/laz25/" target="_blank" class="fa fa-linkedin" title="Linkedin"></span></a></li>
                                         <li><a href="https://github.com/Shanejr25" target="_blank" class="fa fa-github" title="Github"></span></a></li>
                                         <li><a href="https://www.instagram.com/slazio18/" target="_blank" class="fa fa-instagram" title="Instagram"></span></a></li>
+                                        <li><a href="mailto:stlaziojr@gmail.com" target="_blank" class="fa fa-envelope" title="Email"></span></a></li>
                                     </ul>
                             </div>
                         </div>
-                        <div class="col-xl-9 col-lg-10">
+                        <div class="col-xl-9 col-lg-8">
                             <div class="main-menu  d-none d-lg-block text-right">
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="active" href="index.html">home</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        
-                                        <li><a href="/web/viewer.html?file=ShaneLazio-Resume.pdf" target="_blank">Resume</a>
-                                        </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        <li><a href="/web/viewer.html?file=ShaneLazio-Resume.pdf" target="_blank">Resume</a></li>
+                                       
                                     </ul>
                                 </nav>
                             </div>
@@ -79,7 +78,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3>Ubar Mobile App</h3>
+                        <h3>DragonDen Mobile App</h3>
                     </div>
                 </div>
             </div>
@@ -94,7 +93,7 @@
                     <div class="details_catagory_wrap">
                         <div class="single_catagory">
                             <span>Client</span>
-                            <h4>Mesica Chouhan</h4>
+                            <h4>DragonChain</h4>
                         </div>
                         <div class="single_catagory">
                             <span>Category</span>
@@ -102,7 +101,7 @@
                         </div>
                         <div class="single_catagory">
                             <span>Project Date</span>
-                            <h4>Oct 12, 2019</h4>
+                            <h4>March 02, 2019</h4>
                         </div>
                         <div class="single_catagory">
                         </div>
@@ -111,18 +110,22 @@
                         </div>
                     </div>
                     <div class="banner">
-                        <img src="img/details/banner_details.png" alt="">
+                        <img src="img/senior_project/posts.JPG" alt="Image of the home page tabs in the app">
                     </div>
                     <div class="details_info">
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-10">
                                 <div class="info">
-                                    <p>A wonderful serenity has taken to the possession of my entire soul network infrastructure, including consolidation of established network designed and created infrastructure. Voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="info">
-                                    <p>A wonderful serenity has taken to the possession of my entire soul network infrastructure, including consolidation of established network designed and created infrastructure.</p>
+                                    <p> The DragonDen Mobile App was my senior project at Central Washington University.
+                                        I worked in a team of 5 and created an application similar to Reddit, based on
+                                        Dragonchain's web application. We wrote this in the Flutter framework and Dart
+                                        language to make it easy to run on both Android and IOS without having to develop
+                                        multiple times for each platform. The application makes JSON calls to their API
+                                        and allows you to create and comment on text/image posts while utilizing the user's
+                                        Dragon currency.<br /><br />
+
+                                        Note: Not much code is included on the project link page because of an NDA.
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -131,12 +134,43 @@
                         <div class="row">
                             <div class="col-lg-6 col-md-6">
                                 <div class="thumb">
-                                    <img src="img/details/1.png" alt="">
+                                    <img src="img/senior_project/project_creation.JPG" alt="Project creation page">
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="details_single_img">
+                        <div class="row">
                             <div class="col-lg-6 col-md-6">
                                 <div class="thumb">
-                                    <img src="img/details/2.png" alt="">
+                                    <img src="img/senior_project/posts.JPG" alt="Post creation page">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="details_single_img">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6">
+                                <div class="thumb">
+                                    <img src="img/senior_project/user.JPG" alt="User page">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="details_single_img">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6">
+                                <div class="thumb">
+                                    <img src="img/senior_project/comments.JPG" alt="Comment">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="details_single_img">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6">
+                                <div class="thumb">
+                                    <img src="img/senior_project/comments2.JPG" alt="More comment features">
                                 </div>
                             </div>
                         </div>
