--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
                                     <ul id="navigation">
                                         <li><a class="active" href="index.html">home</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        
                                         <li><a href="/web/viewer.html?file=ShaneLazio-Resume.pdf" target="_blank">Resume</a>
                                         </li>
                                     </ul>
@@ -99,12 +98,12 @@
             <div class="portfolio_wrap">
                 <div class=" single_gallery">
                     <div class="thumb">
-                        <img src="img/portfolio/1.png" alt="">
+                        <img src="img/senior_project/dragonchain.JPG" alt="">
                     </div>
                     <div class="gallery_hover">
                         <div class="hover_inner">
                                 <span>Mobile App</span>
-                                <a href="work_details.html"> <h3>Ubar Mobile App</h3></a>
+                                <a href="capstone_project.html"> <h3>DragonDen App</h3></a>
                                 
                         </div>
                     </div>
