again... fixed intial image sizing and window resizing

--- a/capstone_project.html
+++ b/capstone_project.html
@@ -130,20 +130,19 @@
                             </div>
                         </div>
                     </div>
-                <div></div>
+                <div class="capstone_image_gallery">
                     <div class="details_single_img">
                         <div class="row">
-                            <div class="col-lg-6 col-md-8">
+                            <div class="col-lg-10 col-md-10">
                                 <div class="thumb">
                                     <img src="img/senior_project/project_creation.JPG" alt="Project creation page">
                                 </div>
                             </div>
                         </div>
                     </div>
-                    
                     <div class="details_single_img">
                         <div class="row">
-                            <div class="col-lg-6 col-md-8">
+                            <div class="col-lg-10 col-md-10">
                                 <div class="thumb">
                                     <img src="img/senior_project/user.JPG" alt="User page">
                                 </div>
@@ -152,7 +151,7 @@
                     </div>
                     <div class="details_single_img">
                         <div class="row">
-                            <div class="col-lg-6 col-md-8">
+                            <div class="col-lg-10 col-md-10">
                                 <div class="thumb">
                                     <img src="img/senior_project/comments.JPG" alt="Comment">
                                 </div>
@@ -161,7 +160,7 @@
                     </div>
                     <div class="details_single_img">
                         <div class="row">
-                            <div class="col-lg-6 col-md-8">
+                            <div class="col-lg-10 col-md-10">
                                 <div class="thumb">
                                     <img src="img/senior_project/comments2.JPG" alt="More comment features">
                                 </div>
@@ -169,7 +168,7 @@
                         </div>
                     </div>
                 </div>
-                
+                </div>
             </div>
         </div>
     </div>
