added padding to make about me page easier to read

--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="row justify-content-center">
-                    <div class="col-lg-10">
+                    <div class="col-lg-10 col-md-8">
                         <div class="me">
                             <img src="img/about/me-2020.jpg" alt="" style="height:250px;width:250px;"><br />
                         </div>
