fixed header section so it is formatted properly

--- a/about.html
+++ b/about.html
@@ -38,27 +38,25 @@
             <div id="sticky-header" class="main-header-area">
                 <div class="container-fluid">
                     <div class="row align-items-center">
-                        <div class="col-xl-3 col-lg-2">
+                        <div class="col-xl-3 col-lg-4">
                             <div class="logo">
                                     <!-- Social Icons -->
                                     <ul class="icons">
-                                        <li><a href="https://www.linkedin.com/in/laz25/" class="fa fa-linkedin" title="Linkedin"></span></a></li>
-                                        <li><a href="https://github.com/Shanejr25" class="fa fa-github" title="Github"></span></a></li>
-                                        <li><a href="https://www.instagram.com/slazio18/" class="fa fa-instagram" title="Instagram"></span></a></li>
+                                        <li><a href="https://www.linkedin.com/in/laz25/" target="_blank" class="fa fa-linkedin" title="Linkedin"></span></a></li>
+                                        <li><a href="https://github.com/Shanejr25" target="_blank" class="fa fa-github" title="Github"></span></a></li>
+                                        <li><a href="https://www.instagram.com/slazio18/" target="_blank" class="fa fa-instagram" title="Instagram"></span></a></li>
                                         <li><a href="mailto:stlaziojr@gmail.com" target="_blank" class="fa fa-envelope" title="Email"></span></a></li>
                                     </ul>
                             </div>
                         </div>
-                        <div class="col-xl-9 col-lg-10">
+                        <div class="col-xl-9 col-lg-8">
                             <div class="main-menu  d-none d-lg-block text-right">
                                 <nav>
                                     <ul id="navigation">
                                         <li><a class="active" href="index.html">home</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        
                                         <li><a href="/web/viewer.html?file=ShaneLazio-Resume.pdf" target="_blank">Resume</a>
                                         </li>
-
                                     </ul>
                                 </nav>
                             </div>
