updated parts of the portfolio

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                     </div>
                     <div class="gallery_hover">
                             <div class="hover_inner">
-                                    <span>Mobile App</span>
-                                    <a href="work_details.html"> <h3>Ubar Mobile App</h3></a>
+                                    <span>Unknown</span>
+                                    <a href=""> <h3>Under construction...</h3></a>
                             </div>
                         </div>
                 </div>
@@ -125,8 +125,8 @@
                     </div>
                     <div class="gallery_hover">
                             <div class="hover_inner">
-                                    <span>Mobile App</span>
-                                    <a href="work_details.html"> <h3>Ubar Mobile App</h3></a>
+                                    <span>Unknown</span>
+                                    <a href=""> <h3>Under construction...</h3></a>
                             </div>
                         </div>
                 </div>
@@ -136,8 +136,8 @@
                     </div>
                     <div class="gallery_hover">
                             <div class="hover_inner">
-                                    <span>Mobile App</span>
-                                    <a href="work_details.html"> <h3>Ubar Mobile App</h3></a>
+                                    <span>Unknown</span>
+                                    <a href=""> <h3>Under construction...</h3></a>
                             </div>
                         </div>
                 </div>
@@ -147,8 +147,8 @@
                     </div>
                     <div class="gallery_hover">
                             <div class="hover_inner">
-                                    <span>Mobile App</span>
-                                    <a href="work_details.html"> <h3>Ubar Mobile App</h3></a>
+                                    <span>Unknown</span>
+                                    <a href=""> <h3>Under construction...</h3></a>
                             </div>
                         </div>
                 </div>
@@ -158,8 +158,8 @@
                     </div>
                     <div class="gallery_hover">
                             <div class="hover_inner">
-                                    <span>Mobile App</span>
-                                    <a href="work_details.html"> <h3>Ubar Mobile App</h3></a>
+                                    <span>Unknown</span>
+                                    <a href=""> <h3>Under construction...</h3></a>
                             </div>
                         </div>
                 </div>
@@ -169,8 +169,8 @@
                     </div>
                     <div class="gallery_hover">
                             <div class="hover_inner">
-                                    <span>Mobile App</span>
-                                    <a href="work_details.html"> <h3>Ubar Mobile App</h3></a>
+                                    <span>Unknown</span>
+                                    <a href=""> <h3>Under construction...</h3></a>
                             </div>
                         </div>
                 </div>
@@ -180,8 +180,8 @@
                     </div>
                     <div class="gallery_hover">
                             <div class="hover_inner">
-                                    <span>Mobile App</span>
-                                    <a href="work_details.html"> <h3>Ubar Mobile App</h3></a>
+                                    <span>Unknown</span>
+                                    <a href=""> <h3>Under construction...</h3></a>
                             </div>
                         </div>
                 </div>
@@ -191,8 +191,8 @@
                     </div>
                     <div class="gallery_hover">
                             <div class="hover_inner">
-                                    <span>Mobile App</span>
-                                    <a href="work_details.html"> <h3>Ubar Mobile App</h3></a>
+                                    <span>Unknown</span>
+                                    <a href=""> <h3>Under construction...</h3></a>
                             </div>
                         </div>
                 </div>
