Change resume link to revised resume

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                     <ul id="navigation">
                                         <li><a class="active" href="index.html">home</a></li>
                                         <li><a href="about.html">About</a></li>
-                                        <li><a href="/web/viewer.html?file=ShaneLazio-Resume.pdf" target="_blank">Resume</a>
+                                        <li><a href="/web/viewer.html?file=Shane Lazio_Resume_Revised.pdf" target="_blank">Resume</a>
                                         </li>
                                     </ul>
                                 </nav>
