added space in the title on the home page

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div class="col-xl-12">
                         <div class="slider_text text-center">
                             <span>Hi, my name is</span>
-                            <h3>Shane Lazio.<br /> Welcome to my Portfolio!</h3>
+                            <h3>Shane Lazio.<br /><br /> Welcome to my Portfolio!</h3>
                         </div>
                     </div>
                 </div>
